Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants

        - log_to_syslog now accepts facility strings.
	- log_to_syslog would not allow facilities - "$facility|$level"
          *literally* means that string. sheesh.
        - the CPAN parser got confused and thought we provide Sys::Syslog, try
          to work around.

6.01  Fri Aug 26 07:04:11 CEST 2011
        - INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
          the TTL as fourth element - this affects ->resolve, ->request
          and ->dns_unpack indirectly. Convenience functions such as
          AnyEvent::DNS::{a,txt,mx,srv} are not affected, neither is
          AnyEvent::Socket.
        - INCOMPATIBLE CHANGE: backend authors now should not implement
          one_event or loop, but instead the AnyEvent::CondVar::_wait and _poll
          methods.
        - INCOMPATIBLE CHANGE: verbosity levels have been redefined, see
          AnyEvent (PERL_ANYEVENT_VERBOSE) and AnyEvent::Log for details.
        - DEPRECIATION: please change
          "use AnyEvent::Impl::Perl" to "use AnyEvent::Loop" and
          "AnyEvent::Impl::Perl::loop" to "AnyEvent::Loop::run"
          in your programs, for future compatibility.
        - *blush* idle watcher emulation was borked.
        - AnyEvent::Strict now checks the AE::xxx functions as well.
        - querying too long domain names would barf deep inside AnyEvent::DNS - since
          this is hard to avoid for applications, AnyEvent:.DNS::request now checks for
          for too long domain names explicitly and passes an undef to the callback
          instead (reported by James Bromberger).
        - make AnyEvent::Util more robust against EINTR (analyzed by Andrew Suffield).
        - new functions: AnyEvent::postpone, AnyEvent::log.
        - new module: AnyEvent::Log, for simple logging needs.
        - new env variable, PERL_ANYEVENT_LOG, for fine-grained logging config.