@@ -15,7 +15,7 @@ lib/AnyEvent/Impl/Cocoa.pm
 lib/AnyEvent/Impl/EV.pm
 lib/AnyEvent/Impl/Event.pm
 lib/AnyEvent/Impl/EventLib.pm
-lib/AnyEvent/Impl/FLTK2.pm
+lib/AnyEvent/Impl/FLTK.pm
 lib/AnyEvent/Impl/Glib.pm
 lib/AnyEvent/Impl/IOAsync.pm
 lib/AnyEvent/Impl/Irssi.pm
